# game.libretro.beetle-pce-fast

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/beetle-pce-fast/: CMakeLists.txt  beetle-pce-fast.txt
game.libretro.beetle-pce-fast/: addon.xml  addon.xml.in
game.libretro.beetle-pce-fast/resources/: settings.xml
game.libretro.beetle-pce-fast/resources/language/English/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.af_za/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.am_et/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.ar_dz/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.ar_sa/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.ast_es/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.az_az/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.be_by/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.bg_bg/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.bs_ba/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.ca_es/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.cs_cz/: strings.po
game.libretro.beetle-pce-fast/resources/language/resource.language.cy_gb/: strings.po
(+79 files in other folders)
